--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">QR App</string>
     <string name="title_activity_main2">MainActivity2</string>
+    <string name="title_activity_sign_up">SignUp</string>
+    <string name="title_activity_login_screen">LoginScreen</string>
 </resources>
